fixed cta and login link alignment

--- a/src/_themes/espnplus/scss/_global_header.scss
+++ b/src/_themes/espnplus/scss/_global_header.scss
@@ -95,7 +95,8 @@ Stub Name:  global_header.scss
     }
     .menu-item a:active,
     .menu-item a:hover, {
-        color: white;
+        color: black;
+        text-decoration: underline;
     }
     .menu-item:nth-child(2) {
         width:42px;
@@ -112,6 +113,13 @@ Stub Name:  global_header.scss
         .menu-item:nth-child(2) {
             margin-left:0;
         }
+    }
+    #menu-item-320.menu-item a:link,
+    #menu-item-320.menu-item a:visited,
+    #menu-item-320.menu-item a:active,
+    #menu-item-320.menu-item a:hover {
+        margin-top: 0;
+        display: none;
     }
 }
 
@@ -146,7 +154,8 @@ Stub Name:  global_header.scss
             color: white;
         } // active & hover
     } // .parallelogram
-    .btn.btn-primary {
+    .btn.btn-primary:link,
+    .btn.btn-primary:visited {
         cursor: pointer;
         position: absolute;
         display: inline-block;
@@ -173,4 +182,9 @@ Stub Name:  global_header.scss
         ms-transform: skew(45deg);
         transform: skew(45deg);
     } //.btn-primary 
+    .btn.btn-primary:active,
+    .btn.btn-primary:hover {
+        text-decoration: none;
+        color: white;
+    } 
 } // .espn-cta-container
