--- a/src/_unmin/scss/espnplus-critical.css
+++ b/src/_unmin/scss/espnplus-critical.css
@@ -6240,7 +6240,8 @@ Stub Name:  global_header.scss
     color: black; }
   .menu .menu-item a:active,
   .menu .menu-item a:hover {
-    color: white; }
+    color: black;
+    text-decoration: underline; }
   .menu .menu-item:nth-child(2) {
     width: 42px;
     margin-left: 38px; }
@@ -6254,6 +6255,12 @@ Stub Name:  global_header.scss
         margin: 0; }
       .menu .menu-item:nth-child(2) {
         margin-left: 0; } }
+  .menu #menu-item-320.menu-item a:link,
+  .menu #menu-item-320.menu-item a:visited,
+  .menu #menu-item-320.menu-item a:active,
+  .menu #menu-item-320.menu-item a:hover {
+    margin-top: 0;
+    display: none; }
 
 .site-title {
   display: none; }
@@ -6281,7 +6288,8 @@ Stub Name:  global_header.scss
     .espn-cta-btn-container .parallelogram:hover, .espn-cta-btn-container .parallelogram:active {
       background-color: black;
       color: white; }
-  .espn-cta-btn-container .btn.btn-primary {
+  .espn-cta-btn-container .btn.btn-primary:link,
+  .espn-cta-btn-container .btn.btn-primary:visited {
     cursor: pointer;
     position: absolute;
     display: inline-block;
@@ -6307,6 +6315,10 @@ Stub Name:  global_header.scss
     webkit-transform: skew(45deg);
     ms-transform: skew(45deg);
     transform: skew(45deg); }
+  .espn-cta-btn-container .btn.btn-primary:active,
+  .espn-cta-btn-container .btn.btn-primary:hover {
+    text-decoration: none;
+    color: white; }
 
 /*--------------------------------------------------------------
 # component_spotlight
